build_out2.txt
cargo :    Compiling warroom v0.1.0 (E:\SpaceTime Db)
At line:1 char:1
+ cargo build --target wasm32-unknown-unknown > build_out.txt 2>&1
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (   Compiling wa...:\Sp 
   aceTime Db):String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
warning: unused import: `spacetimedb::http::Request`
 --> src\lib.rs:4:5
  |
4 | use spacetimedb::http::Request;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on 
by default

error[E0507]: cannot move out of `pattern`, a captured variable in 
an `Fn` closure
    --> src\lib.rs:1336:26
     |
1284 |     let (current_time, all_done, crisis, pattern, 
agent_decisions) = ctx.with_tx(|tx_ctx| {
     |                                          ------- captured 
outer variable
...
1325 |         ctx.with_tx(|tx_ctx| {
     |                     -------- captured by this `Fn` closure
...
1336 |                 pattern: pattern,
     |                          ^^^^^^^ move occurs because 
`pattern` has type `std::string::String`, which does not implement 
the `Copy` trait
     |
help: `Fn` and `FnMut` closures require captured values to be able 
to be consumed multiple times, but `FnOnce` closures may consume 
them only once
    --> C:\Users\HP\.cargo\registry\src\index.crates.io-1949cf8c6b5b
557f\spacetimedb-2.1.0\src\lib.rs:1307:45
     |
1307 |     pub fn with_tx<T>(&mut self, body: impl Fn(&TxContext) 
-> T) -> T {
     |                                             
^^^^^^^^^^^^^^^^^^^
help: consider cloning the value if the performance cost is 
acceptable
     |
1336 |                 pattern: pattern.clone(),
     |                                 ++++++++

For more information about this error, try `rustc --explain E0507`.
warning: `warroom` (lib) generated 1 warning
error: could not compile `warroom` (lib) due to 1 previous error; 1 
warning emitted
